fixed z-index for technology tabs and updated the background images for mobile layouts to properly display

--- a/index.css
+++ b/index.css
@@ -535,7 +535,7 @@ body {
 
 /* crew */
 .crew {
-	background-image: url(./assets/home/background-crew-mobile.jpg);
+	background-image: url(./assets/crew/background-crew-mobile.jpg);
 }
 
 @media (min-width: 35rem) {
@@ -553,7 +553,8 @@ body {
 
 /* technology */
 .technology {
-	background-image: url(./assets/home/background-technology-mobile.jpg);
+	background-position: center center;
+	background-image: url(./assets/technology/background-technology-mobile.jpg);
 }
 
 @media (min-width: 35rem) {
@@ -692,7 +693,7 @@ body {
 }
 
 .grid-container--technology > .number-indicators {
-	z-index: 1111;
+	z-index: 999;
 	display: flex;
 	gap: 1em;
 	grid-area: tabs;
